# goomboy

./: .gitignore  CMakeLists.txt  compile_commands.json  doomcmake.txt  sdkconfig  sdkconfig.old
components/doomgeneric/: CMakeLists.txt  d_main.c  doomstat.h  f_finale.c  g_game.c  hu_stuff.c  i_system.c  info.c  m_menu.c  p_ceilng.c  p_doors.c  p_enemy.c  p_floor.c  p_inter.c  p_map.c  p_mobj.c  p_plats.c  p_pspr.c  p_setup.c  p_spec.c  p_switch.c  p_telept.c  r_main.c  r_plane.c  r_state.h  st_stuff.c  wi_stuff.c
components/gayinvaders/: CMakeLists.txt  boss.c  boss.h  bullet.c  bullet.h  collisions.c  collisions.h  enemy.c  enemy.h  gameobject.h  gayinvaders.c  gayinvaders.h  hud.c  hud.h  inputs.c  inputs.h  llist.c  llist.h  number.c  number.h  physics.c  physics.h  player.c  player.h  powerup.c  powerup.h  renderer.c  renderer.h  scene.h  timers.c  timers.h  wd.c  wd.h
components/gayinvaders/scenes/: badboys.c  badboysboss.c  badboyseasy.c  badboysfast.c  badboysmoving.c  badboystank.c  bossfight.c  dead.c  game.c  intro.c  mainmenu.c  win.c
main/: CMakeLists.txt  idf_component.yml  main.c  system.c  system.h
main/doom/: am_map.c  d_loop.c  g_game.c  r_bsp.c  r_main.c  r_plane.c  title_swap.py
main/drivers/: gpio.c  gpio.h  lcd.c  lcd.h  sdcard.c  sdcard.h
main/prdoom/: CMakeLists.txt
main/utils/: queue.c  queue.h
tools/: make_flash.sh  wdpacker.py
